# command-center

./: .browserslistrc  .env  .env.example  .gitignore  .gitignore.save  .gitmodules  .replit  AGENTS.md  AIRTABLE_DOCUMENTATION.md  AUTOMATION_FUNCTIONS_110_130_COMPLETE_STATUS.md  AUTOMATION_SYSTEM_DOCUMENTATION.md  CENTRALIZED_AIRTABLE_SYSTEM.md  COMPLETE_1000_FUNCTION_AUDIT.md  COMPLETE_311_FUNCTION_YOBOT_SYSTEM_REPORT.md  COMPLETE_AIRTABLE_AUDIT.md  COMPLETE_AUTOMATION_FUNCTIONS_EXPORT.csv  COMPLETE_SYSTEM_AUTOMATION_STATUS.md  COMPLETE_WEEK_AUTOMATION_SUMMARY.md  COMPLETE_YOBOT_IMPLEMENTATION_REPORT.md  COMPREHENSIVE_VALIDATION_REPORT.json  DEPLOY.md  DETAILED_IMPLEMENTATION_STATUS.md  FAILED_TESTS_FIX_PLAN.md  Feature_Module_Status_Check.csv  INTEGRATION_LOGGER.py  LICENSE  Makefile  PHASE_2_COMPLETION_REPORT.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PRODUCTION_HARDENED_LOGGER.py  PRODUCTION_READY_GUIDE.md  README.md  REAL_FORM_SUBMISSION_1749321177228.json  REAL_TALLY_1749320890602.json  REORGANIZATION_PLAN.md  REORGANIZATION_README.md  REORGANIZATION_SUMMARY.md  REORGANIZATION_VERIFICATION.md  SECURITY_IMPLEMENTATION_SUMMARY.md  TYSON_INTEGRATION_LOGGER.py  (+4214 more)
.claude/: settings.local.json
_archive/: README.md
archived_files/: intro_wilson_properties.txt  knowledge_test.txt  qbo_auth_exchange.js  server.js  system_automation_log.json
attached_assets/: Command Center Features Checklist.docx  Control Center Items Needed.docx  Pasted--011-Slack-Team-Notification-optional-async-function-sendSlackNotification-message-retu-1748994588854.txt  (+380 more)
backend/: loadEnv.ts
(+2694 files in other folders)
