[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=2.1.0",
    "flask>=3.1.1",
    "openai>=1.83.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "stripe>=12.2.0",
    "werkzeug>=3.1.3",
]
