[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=2.1.0",
    "flask>=3.1.1",
    "fpdf2>=2.8.3",
    "google-api-python-client>=2.171.0",
    "google-auth>=2.40.2",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "openai>=1.83.0",
    "pandas>=2.2.3",
    "pdfkit>=1.0.0",
    "pyairtable>=3.1.1",
    "python-dotenv>=1.1.0",
    "reportlab>=4.4.1",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "slack-sdk>=3.35.0",
    "stripe>=12.2.0",
    "urllib3>=2.4.0",
    "weasyprint>=65.1",
    "websockets>=15.0.1",
    "werkzeug>=3.1.3",
]
